# KMPP

./: .artifactignore  .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  config.cnf
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  pipeline_ubuntu20.yml  pipeline_ubuntu22.yml  pipeline_ubuntu24.yml  testBuildScript_ubuntu20.yml  testBuildScript_ubuntu22.yml  testBuildScript_ubuntu24.yml
example/: generate_pfx.sh  test.c
include/: keyiso.h  keyisocert.h  keyisocurl.h  keyisomemory.h  keyisoutils.h
include/gdbus/: kmppctrlgdbusgenerated.h  kmppgdbusgenerated.h  kmppgdbuspfxclient.h
include/gdbus/ctrlclient/: kmppgdbusctrlclient.h
include/internal/: keyisocertinternal.h  keyisoctrl.h  keyisoipccommonserialize.h  keyisoipcgenericmessage.h  keyisoipcserializeapi.h  keyisotelemetry.h  kmpptestutils.h
include/internal/clientservice/: keyisocommon.h  keyisoipccommands.h  keyisolog.h  keyisosymcryptcommon.h  kmppsymcryptwrapper.h
include/internal/gdbus/: kmppgdbusclientcommon.h
kmppclient/: keyisoclient.c  keyisoclienteng.c  keyisoclientinit.c  keyisoclientmsghandler.c  keyisoclientpbe.c  keyisoclientpkcs12.c  keyisoclientpkcs8.c  keyisoclientprov.c  keyisoctrlclient.c  keyisoipcclientadapter.c  kmppipcutils.c
kmppclient/include/: keyisoclient.h  keyisoclientprov.h  keyisoctrlclient.h  keyisopfxclient.h  keyisosymmetrickeyclient.h
kmppclient/include/internal/: keyisoclientinternal.h  keyisoclientmsghandler.h  keyisoclientprovinternal.h  keyisoinprocmsghandler.h  keyisoipcclientadapter.h  keyisojsonutils.h  keyisopfxclientinternal.h  keyisosymmetrickeyclientinternal.h  kmppgdbusclient.h  kmppopteeclient.h  kmppopteeutils.h
kmppclient/optee_client/: kmppopteeclient.c
kmppclient/tpm_client/: keyisotpmclientconfig.c  keyisotpmclientmsghandler.c  keyisotpmclientpbe.c
kmppclient/tpm_client/include/internal/: keyisotpmclient.h  keyisotpmclientmsghandler.h
kmppctrlservice/: 50-dbus-com.microsoft.kmppctrl.preset  CMakeLists.txt  com.microsoft.kmppctrl.conf.in  com.microsoft.kmppctrl.service.in  dbus-com.microsoft.kmppctrl.service.in  keyisoctrlservice.c
kmpplib/: keyisobaselog.c  keyisocert.c  keyisocommonossl.c  keyisocurl.c  keyisojsonutils.c  keyisolog.c  keyisomemory.c  keyisopbe.c  keyisopkcs12.c  keyisosymcryptcommon.c  keyisotelemetry.c  keyisoutils.c  kmppctrlgdbusgenerated.c  kmppgdbusclient.c  kmppgdbusclientcommon.c  kmppgdbusctrlclient.c  kmppgdbusgenerated.c  kmppgdbuspfxclient.c
kmpplib/ossl/: keyisomemory.c
kmpplib/serialization/: keyisoipccommonserialize.c  keyisoipcprivatekeyserialization.c
kmpppfx/: e_keyisopfx.c  e_keyisopfx_err.c  e_keyisopfx_err.h  e_keyisosymmetric.c  e_keyisosymmetric.h
kmppprovider/: CMakeLists.txt  p_keyiso.c  p_keyiso_base.c  p_keyiso_common.c  p_keyiso_common_keymgmt.c  p_keyiso_crypto.c  p_keyiso_decoder.c  p_keyiso_dflt.c  p_keyiso_ecc_keymgmt.c  p_keyiso_ecc_signature.c  p_keyiso_encoder.c  p_keyiso_err.c  p_keyiso_keyexch.c  p_keyiso_keymgmt.c  p_keyiso_rsa_cipher.c  p_keyiso_rsa_common.c  p_keyiso_rsa_keymgmt.c  p_keyiso_rsa_signature.c  p_keyiso_store.c  p_keyiso_utils.c
kmppprovider/conf/: kmpp_dflt_prov.cnf  kmpp_prov.cnf  openssl.cnf.sample
kmppprovider/include/: p_keyiso.h  p_keyiso_base.h  p_keyiso_err.h
kmppservice/: 50-dbus-com.microsoft.kmpp.preset  CMakeLists.txt  com.microsoft.kmpp.conf.in  com.microsoft.kmpp.service.in  dbus-com.microsoft.kmpp.service.in  dbus-com.microsoft.kmpp.service.soc.in  dbus-com.microsoft.kmpp.service.tpm.in  keyisoguidlookuparraycache.c  keyisoipcserviceadapter.c  keyisolrucache.c  keyisomachinesecretlegacy.c  keyisomachinesecretrotation.c  keyisoserviceapi.c  keyisoservicecommon.c  keyisoservicecrypto.c  keyisoservicecryptosymcrypt.c  keyisoserviceinprocmsghandler.c  keyisoservicekeycache.c  keyisoservicekeygen.c  keyisoservicekeylistgdbus.c  keyisoservicemsghandler.c  keyisoservicesymmetrickey.c  kmpp.slice.in  kmppgdbusmsghandler.c  kmppgdbusservice.c
kmppservice/include/internal/: keyisoipcserviceadapter.h  keyisolrucache.h  keyisomachinesecretrotation.h  keyisoserviceapi.h  keyisoservicecommon.h  keyisoservicecrypto.h  keyisoserviceinprocmsghandler.h  keyisoservicekey.h  keyisoservicekeygen.h  keyisoservicekeylist.h  keyisoservicemsghandler.h  keyisoservicesymmetrickey.h
kmppservice/include/internal/gdbus/: keyisoguidlookupcache.h  keyisoservicekeylistgdbus.h  kmppgdbusmsghandler.h
kmppservice/include/internal/ossl/: deprecatedServiceMessageHandler.h  keyisoserviceapiossl.h
kmppservice/keylist/: keyisoservicekeylist.c
kmppservice/ossl/: deprecatedServiceMessageHandler.c  keyisoserviceapiossl.c
kmppservice/ta/: Makefile  keyisologta.c  keyisoservicekeylistta.c  kmppta.c  kmpptamsghandler.c  sub.mk  user_ta_header_defines.h  uuid.c
kmppservice/ta/include/: keyisoservicekeylistta.h  kmppta.h  kmpptamsghandler.h
kmppservice/ta/include/internal/: kmppsymcryptwrapper.h
kmppservice/ta/include/internal/uuid/: uuid.h
scripts/: build.sh  cmake_uninstall.cmake.in  configure_kmpp_default_prov.sh  create_certs.sh  install.sh.in  kmpp.pc.in  makeenv  postinst.in  preinst.in  prerm.in  remove_kmpp_default_configuration.sh  uninstall.sh.in
tools/DotNetKMPP/: DotNetKMPP.cs  DotNetKMPP.csproj
tpm/: CMakeLists.txt  keyisotpmcrypto.c  keyisotpmkeymanagement.c  keyisotpmsetup.c
tpm/include/: keyisotpmcommon.h  keyisotpmcrypto.h  keyisotpmkeymanagement.h  keyisotpmsetup.h
tpm/include/internal/: keyisotpmutils.h
